Tidy code for week 11, generics